--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "main": "index.html",
     "chromium-args": "--force-color-profile=srgb",
     "window": {
-        "title": "Skill-Succession-Sample-MZ",
+        "title": "スキル継承システムMZ",
         "width": 816,
         "height": 624,
         "position": "center",
